[package]
name = "duration-macro"
version = "0.1.0"
authors = ["mexus <gilaldpellaeon@gmail.com>"]
edition = "2018"
description = "Compile-time duration parsing"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["duration"]
documentation = "https://docs.rs/duration-macro/"
repository = "https://github.com/mexus/duration-macro/"
homepage = "https://github.com/mexus/duration-macro/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
